--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "tai-password-strength",
-    "version": "1.0.4",
+    "version": "1.1.0",
     "description": "Check password strength",
     "author": "Christopher Tetreault",
     "homepage": "https://github.com/tests-always-included/password-strength",
@@ -36,6 +36,7 @@
     },
     "license": "MIT",
     "scripts": {
+        "clean": "rm -rf node_modules package-lock.json",
         "jasmine": "grunt jasmine_node",
         "jslint": "grunt jslint",
         "server": "grunt connect",
